# enoslib

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.rst  changelog.rst  setup.cfg  setup.py  sonar-project.properties  test-requirements.txt  tox.ini
contrib/: provision_ansible_inventory_g5k.py  provision_ansible_inventory_vmong5k.py
docs/: Makefile  conf.py  contributing.rst  getting-started.rst  index.rst  make.bat  performance_tuning.rst  primer.rst  theyuseit.rst  tutorials.rst
docs/apidoc/: api.rst  conda_dask.rst  docker.rst  enoslib.infra.enos_chameleonbaremetal.rst  enoslib.infra.enos_chameleonkvm.rst  enoslib.infra.enos_g5k.rst  enoslib.infra.enos_openstack.rst  enoslib.infra.enos_static.rst  enoslib.infra.enos_vagrant.rst  enoslib.infra.rst  enoslib.provider.rst  enoslib.rst  global_api.rst  index.rst  infra.rst  k3s.rst  kwollect.rst  locust.rst  modules.rst  monitoring.rst  netem.rst  objects.rst  planning.rst  service.rst  skydive.rst  task.rst  tcpdump.rst
docs/apidoc/examples/: advanced_docker.py  conda.py  dask.ipynb  dask.py  docker.py  docker_g5k.py  dstat.py  k3s.py  kwollect.py  locust.py  monitoring.py  monitoring_gpus.py  netem.py  run_actions.py  run_play_on.py  skydive.py  tcpdump.py
docs/getting-started/: .gitignore  hosts  step1.py  step3.py
docs/getting-started/_tmp_enos_/: enos-0.out
docs/jupyter/: 00_setup_and_basics.ipynb  01_remote_actions_and_variables.ipynb  02_observability.ipynb  03_using_several_networks.ipynb  04_working_with_virtualized_resources.ipynb
docs/jupyter/fit/: 02_mqttsn.ipynb  index.rst
docs/jupyter/g5k/: 01_remote_actions_and_variables.ipynb  02_observability.ipynb  04_working_with_virtualized_resources.ipynb  index.rst
docs/jupyter_integration/: exemple.ipynb
docs/tutorials/: .gitignore  ansible-integration.rst  chameleon.rst  cleanup_g5k_job.py  distem.rst  docker.rst  fabric.rst  global_config.rst  grid5000.rst  index.rst  iotlab.rst  multi_providers.rst  network_emulation.rst  parameters_exploration.rst  performance_tuning.rst  quickstart.rst  reproducibility.rst  setup_g5k.rst  setup_iotlab.rst  static.rst  sync-info.rst  using-tasks.rst  vagrant.rst  vmong5k.rst
docs/tutorials/ansible-integration/: .gitignore  flent_on.py  flent_on_grid5000.py  flent_on_vmong5k.py  garage.py  garage.toml.j2  play_on.py  result_ok  run_ansible.py  run_command.py
docs/tutorials/chameleon/: tuto_chameleon_edge_to_cloud.py  tuto_chameleonbaremetal.py
docs/tutorials/chiedge/: tuto_chiegde_basic.py
docs/tutorials/distem/: .gitignore  tuto_distem.py
docs/tutorials/fabric/: tuto_fabric.py  tuto_fabric_complex.py
docs/tutorials/grid5000/: delays.py  hosts  tuto_grid5000.py  tuto_grid5000_basic.py  tuto_grid5000_commands.py  tuto_grid5000_deploy.py  tuto_grid5000_deploy_centos.py  tuto_grid5000_destroy.py  tuto_grid5000_dict.py  tuto_grid5000_disable_cache.py  tuto_grid5000_docker.py  tuto_grid5000_docker_nvidia.py  tuto_grid5000_kavlan_complex.py  tuto_grid5000_kavlan_global.py  tuto_grid5000_kavlan_local.py  tuto_grid5000_kavlan_primary.py  tuto_grid5000_kavlan_secondary.py  tuto_grid5000_kwollect.py  tuto_grid5000_monitoring_service.py  tuto_grid5000_multisites.py  tuto_grid5000_non_deploy.py  tuto_grid5000_non_deploy_docker.py  tuto_grid5000_non_deploy_p.py  tuto_grid5000_non_deploy_p_complete.py  tuto_grid5000_non_deploy_p_exotic.py  tuto_grid5000_non_deploy_p_multisites.py  tuto_grid5000_non_deploy_tunnel.py  tuto_grid5000_p.py  tuto_grid5000_p_specific_servers.py  tuto_grid5000_p_virt.py  tuto_grid5000_reconfigurable_firewall.py  tuto_grid5000_reload.py  tuto_grid5000_reservable_disks.py  tuto_grid5000_secondary.py  tuto_grid5000_specific_servers.py  tuto_grid5000_subnet.py  tuto_grid5000_subnet_p.py  tuto_grid5000_tunnel.py  tuto_sync_confs.py
docs/tutorials/iotlab/: tuto_iotlab_a8_basic.py  tuto_iotlab_a8_monitoring.py  tuto_iotlab_g5k_ipv6.ipynb  tuto_iotlab_getting_started.py  tuto_iotlab_ipv6_monitoring.py  tuto_iotlab_m3_consumption.py  tuto_iotlab_m3_ipv6.py  tuto_iotlab_m3_radio_monitoring.py  tuto_iotlab_m3_radio_sniffer.py  tuto_iotlab_rpi_basic.py
docs/tutorials/jupyter_integration/: index.ipynb
docs/tutorials/multi_providers/: tuto_chameleon_edge_to_cloud.py  tuto_fit_edge_to_g5k_cloud.py
docs/tutorials/network_emulation/: tuto_netem.py  tuto_netem_htb.py  tuto_network_emulation.py  tuto_service_netem.py  tuto_service_simple_netem.py  tuto_simple_netem.py  tuto_svc_htb.py  tuto_svc_htb_b_second.py  tuto_svc_htb_build.py  tuto_svc_htb_secondary.py  tuto_svc_netem.py  tuto_svc_netem_s.py
docs/tutorials/parameters_exploration/: .gitignore  tuto_sweeper.py
docs/tutorials/performance_tuning/: vmong5k_forks.py
enoslib/: __init__.py  ansible.py  ansible_utils.py  api.py  collections.py  config.py  constants.py  docker.py  enos_inventory.py  errors.py  host.py  local.py  log.py  network.py  network_utils.py  objects.py  task.py  task_utils.py  types.py  utils.py  version.py  version.txt
enoslib/ansible/: utils.retry  utils.yml
enoslib/html/: __init__.py  style.css
enoslib/infra/: configuration.py  provider.py  providers.py  schema.py  utils.py
enoslib/provider/: enos_vagrant.py  g5k.py
enoslib/registry/: process.py  utils.py
enoslib/service/: __init__.py  docker.py  docker.yml  monitoring.py  netem.py  service.py  skydive.py  utils.py
tests/functionnal/: test_chameleonbaremetal.py  test_chameleonkvm.py  test_g5k.py  test_openstack.py  test_static.py  test_vagrant.py
tests/unit/: test_ansible_utils.py  test_network_utils.py
(+308 files in other folders)
