[metadata]
name = enoslib
version = 7.2.1
keywords = evaluation, reproducible research, Grid5000
license_file = LICENSE.txt
url = https://gitlab.inria.fr/discovery/enoslib
author = Matthieu Simonin
author_email = matthieu.simonin@inria.fr
long_description = file: README.rst
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >= 3.7
include_package_data = True
packages = find:
setup_requires =
    setuptools>=39.0.1
    wheel>=0.31.0
install_requires =
    ansible>=2.9,<6.0
    cryptography
    jsonschema>=3.0.0,<3.1.0
    execo>=2.6.2,<2.7
    python-vagrant>=0.5.15
    netaddr~=0.8.0
    python-grid5000~=1.1.0
    ring~=0.9.1
    # from ring
    diskcache>=4.1.0
    distem~=0.0.0
    requests[socks]
    iotlabcli>=3.2.1
    iotlabsshcli>=1.0.0
    sshtunnel>=0.3.1
    rich~=11.0.0

[mypy]
python_version = 3.6
ignore_missing_imports = True

[options.extras_require]
chameleon =
    python-glanceclient
    python-openstackclient
    python-neutronclient
    python-blazarclient>=1.1.1

jupyter =
    rich[jupyter]

analysis =
    pandas

[options.packages.find]
exclude =
    docs
