[metadata]
name = enoslib
version = file: enoslib/version.txt
keywords = evaluation, reproducible research, Grid5000
license_file = LICENSE.txt
url = https://discovery.gitlabpages.inria.fr/enoslib/
author = Matthieu Simonin
author_email = matthieu.simonin@inria.fr
long_description = file: README.rst
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
python_requires = >= 3.7
include_package_data = True
packages = find:
setup_requires =
    setuptools>=39.0.1
    wheel>=0.31.0
install_requires =
    ansible>=2.9,<=6.1
    cryptography
    jsonschema>=3.0.0,<3.1.0
    netaddr~=0.8.0
    requests[socks]
    rich[jupyter]~=11.0.0
    sshtunnel>=0.3.1
    pytz~=2022.1
    # g5k
    python-grid5000>=1.2.3,<2.0.0
    execo>=2.6.2,<2.7
    ring~=0.9.1
    diskcache>=4.1.0

[mypy]
python_version = 3.6
ignore_missing_imports = True

[options.extras_require]
all=
    %(chameleon)s
    %(iotlab)s
    %(vagrant)s
    %(distem)s
chameleon =
    python-glanceclient
    python-openstackclient
    python-neutronclient
    python-blazarclient>=1.1.1
iotlab =
    iotlabcli>=3.2.1
    iotlabsshcli>=1.0.0
vagrant =
    python-vagrant>=0.5.15
distem =
    distem~=0.0.0
silecs =
    %(iotlab)s
analysis =
    pandas

[options.packages.find]
exclude =
    docs
