[metadata]
name = enoslib
version = file: enoslib/version.txt
keywords = evaluation, reproducible research, Grid5000
license_file = LICENSE.txt
url = https://discovery.gitlabpages.inria.fr/enoslib/
author = Matthieu Simonin
author_email = matthieu.simonin@inria.fr
long_description = file: README.rst
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
python_requires = >= 3.7
include_package_data = True
packages = find:
setup_requires =
    setuptools>=39.0.1
    wheel>=0.31.0
install_requires =
    # ansible 4 is kept for backward compatibility with python3.7
    enoslib-ansible>=4,<11
    cryptography
    jsonschema>=3.0.0,<5
    netaddr~=0.8.0
    requests[socks]
    rich[jupyter]~=12.0.0
    sshtunnel>=0.3.1
    pytz~=2022.1
    # Packaging uses year-based versioning, not semantic versioning
    # See also https://github.com/pypa/packaging/issues/716
    packaging>=21.3
    # We will switch to the stdlib variant once we start requiring Python 3.9
    importlib_resources>=5,<6
    # We will switch to the stdlib variant once we start requiring Python 3.8
    importlib_metadata>=6,<7
    # g5k
    python-grid5000>=1.2.3,<2.0.0

[mypy]
ignore_missing_imports = True

[options.extras_require]
all=
    %(chameleon)s
    %(iotlab)s
    %(vagrant)s
    %(distem)s
chameleon =
    python-chi~=0.17
    python-glanceclient<4.0.0
    python-openstackclient<6.0.0
    python-neutronclient<8.0.0
    python-blazarclient>=1.1.1,<4.0.0
    # python-chi do not constraint its dependencies
    python-cinderclient<9.0.0
    openstacksdk<=1.4.0
iotlab =
    iotlabcli>=3.2.1
    iotlabsshcli>=1.0.0
vagrant =
    python-vagrant>=0.5.15
distem =
    distem~=0.0.0
silecs =
    %(iotlab)s
analysis =
    pandas
dev =
    flake8>=3.3.0
    pytest
    freezegun>=1.2.1
    pytest-cov
    mock>=2.0.0
    ddt>=1.1.0
    sphinx
    pydata-sphinx-theme
    autodocsumm
    nbsphinx
    sphinx-design
    sphinx-jsonschema
    # quick fix socks support
    requests[socks]
    mypy==0.991
    ipdb
    pylint

[options.packages.find]
exclude =
    docs
